good/good-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
      app: nginx
      tool: skaffold
  name: frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
  selector:
    run: frontend
status:
  loadBalancer: {}
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: frontend
  template:
    metadata:
      labels:
        run: frontend
    spec:
      containers:
      - image: ghcr.io/finxflo/work
        imagePullPolicy: Always
        name: frontend
        ports:
        - containerPort: 80
