good/gui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gui
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: gui # Nginx Server
          servicePort: 80
